main-0-3-12.css
/* ... */
.card:hover {
  box-shadow: -8px 8px 0px 0px var(--color2);
  top: -8px;
  right: -8px;
}
.card h2 {
  margin: 0;
  padding: 6px 0;
  width: calc(100% - 12px);
  color: #fff;
  font-size: 18px;
  text-shadow: -1px 1px 2px BLACK;
}
.card .cardIcon {
  position: absolute;
  top: 0;
  right: 0;
  height: 54px;
  width: 54px;
  filter: drop-shadow(-2px 2px 2px black);
  color: var(--color2);
  transition: all 200ms;
}
#homepage footer {
  position: sticky;
  width: 100%;
  bottom: 0;
  margin-left: -8px;
  margin-top: 1em;
}
/* first section */
#homepage_content section:first-child {
  margin-top: 2em;
}
#homepage_content section:first-child h1 {
  text-align: center;
  margin-top: 0;
}


/* DIALOG */
/* fixed pos */
.ui-dialog.fixed-dialog{
  position: fixed;
}
/* titlebar */
.ui-dialog.alert .ui-dialog-titlebar{
 background: #b91919;
 color: #fff;
}
.ui-dialog.warn .ui-dialog-titlebar{
  background: #b39703;
  color: #fff;
}
/* icon */
.ui-dialog .svg-inline--fa{
  margin-right: 1em;
}
/* buttons */
.ui-dialog.alert .ui-dialog-buttonpane button{
  background: #b91919;
  color: #fff;
}
.ui-dialog.warn .ui-dialog-buttonpane button{
  background: #b39703;
  color: #fff;
}
.ui-dialog .ui-dialog-buttonpane button:hover{
  filter: brightness(1.1);
}

/* SIDEBAR */
#sidebar {
  background: linear-gradient(270deg, #333 0 35px, #222 35px 100%);

  color: #fff;
  position: relative;
  padding-right: 0;
  padding-left: 0;
  user-select: none;
  -webkit-user-select: none;
  z-index: 100;
}

#sidebar :is(h1, h2, h3, h4, h5, h6) {
  cursor: pointer;
  margin: 0;
  padding-bottom: 6px;
}
#sidebar :is(h1, h2, h3) {
  font-size: 16px;
  text-align: center;
}

#sidebar .score_bookmark_section {
  --height: auto;
  height: var(--height);
  width: calc(100% - 14px - 35px);
  list-style-type: none;
  margin: 0;
  margin-top: 12px;
  padding: 4px;
  position: relative;
  border: 3px solid;
  border-radius: 3px;
  overflow: hidden;
}
#sidebar .score_bookmark_section:last-child {
  position: sticky;
  top: var(--header_height);
}

#sidebar .score_bookmark {
  cursor: pointer;
  padding: 6px 0;
  position: relative;
}
#sidebar .score_bookmark::after {
  content: attr(_title);
}
#sidebar .score_bookmark:hover::after {
  color: #888;
}
#sidebar .score_bookmark.active {
  color: #888;
}
#sidebar .score_bookmark.active:hover::after {
  color: #888;
}

/* search and sort */
#searchAndSort_container {
  padding: 4px 0 0 3px;
  width: calc(100% - 34px - 4px);
  display: flex;
  align-items: center;
  position: sticky;
  top: var(--header_height);
  background: #222;
  padding-bottom: 3px;
  z-index: 2;
}
#searchScores {
  width: 100%;
  position: relative;
}
  #searchScores .fa-magnifying-glass {
    color: black;
    position: absolute;
    font-size: 18px;
    top: 2px;
    right: 2px;
  }
#searchScores input {
  width: 100%;
}
#searchAndSort_container .expand_results {
  padding: 0 6px;
  font-size: 20px;
  cursor: pointer;
  transition: all 0.5s;
  position: relative;
  z-index: 2;
  filter: invert(0);
}
#searchAndSort_container .expand_results.flip {
  transform: rotatex(180deg) translate(-0.4em, -1.25em);
  filter: invert(1);
  /* background: #000; */
}

#searchAndSort_results {
  display: none;
  height: calc(100vh - var(--header_height) - 30px);
  width: calc(100% - 42px);
  border: 4px solid #222;
  border-top: none;
  background: #fff;
  position: sticky;
  top: calc(var(--header_height) + 29px);
  z-index: 1;
  overflow-y: scroll;
}
/* the results scrollbar */
div#searchAndSort_results::-webkit-scrollbar-track {
  background: #222;
}

#sortScores {
  padding: 4px;
  cursor: pointer;
  color: #222;
  display: inline-block;
  font-size: 20px;
  position: sticky;
  top: 0;
  z-index: 1;
}
#sortScores.active {
  background: #222;
  color: #fff;
  border-radius: 40% 40% 0 0;
}
#sortFilters {
  display: none;
  min-height: 24px;
  border: 4px solid #222;
  border-radius: 0 8px 8px 8px;
  color: #666;
  position: sticky;
  top: 28px;
  background: #fff;
  z-index: 1;
}
  #sortFilters ul{
    list-style-type: none;
    margin: 0;
    padding: 0;
  }
  #sortFilters ul li{
    cursor: pointer;
  }
  #sortFilters ul li:hover{
    color: #222;
  }
#activeFilters {
  display: flex;
  flex-wrap: wrap;
  gap: 4px;
  padding: 2px;
}
  #activeFilters span {
    display: none;
    background: #333;
    border: 1px solid #000;
    padding: 0 6px;
    color: #fff;
    border-radius: 1em;
    cursor: pointer;
    transition: all 150ms;
  }
  #activeFilters span:hover {
    background: #bbb;
    color: #222;
  }
  #activeFilters span:after {
    content: '\2717';
    margin-left: 4px;
    line-height: 1.3;
  }

#sidebar #searchAndSort_results .score_bookmark {
  color: #222;
}
#sidebar #searchAndSort_results .score_bookmark .bkmkUtils {
  bottom: -10px;
  fill: #666;
}
#sidebar #searchAndSort_results .score_bookmark .bkmkUtils .contextMenuTrigger:hover{
  fill: #222;
}

#results{
  list-style-type: none;
  padding: 0 4px;
}
#results p.noMatch {
  color: #cd5c5c;
  font-style: italic;
}

/* MY SCORES */
/* if my scores is empty */
#myScores:not(:has(li)):after {
  content: 'Your saved scores will appear here.';
  display: block;
  font-weight: normal;
  color: #999;
}

.bkmkUtils {
  position: absolute;
  right: 0;
  bottom: 9px;
  height: 20px;
  display: flex;
  color: #ccc;
  fill: #ccc;
  align-items: center;
}
.bkmkUtils .contextMenuTrigger {
  width: 5px;
  padding: 0 6px;
}
.bkmkUtils .contextMenuTrigger:hover{
  fill: #fff;
}
.bkmkUtils .dragHandleCourtesy{
  cursor: move;
}
.bkmkUtils :is(.dragHandleCourtesy, .saving, .saved) {
  width: 18px;
}
.bkmkUtils :is(.saving, .saved) {
  display: none;
  margin-right: 6px;
}

/* my score utils */
#myScoresUtils {
  display: flex;
  fill: #ccc;
  gap: 4px;
  width: 100%;
}
#myScoresUtils span {
  width: 1em;
  cursor: pointer;
}
#myScoresUtils span:hover{
  fill: #fff;
}
#loadScoresContainer label {
  display: inline-block;
  width: 100%;
  height: 100%;
  cursor: pointer;
}
/* ... */

